crates/reinhardt-pages/tests/ui/page/fail/invalid_for_pattern.stderr
error: expected `in`
  --> tests/ui/page/fail/invalid_for_pattern.rs:12:3
   |
12 |         items {
   |         ^^^^^
